# GolfMembersManager

./: CMakeLists.txt  Diagram.drawio  README.md
src/: golfMembershipManager.cpp  golfMembershipManager.h  main.cpp
src/app/Controller/: Controller.cpp  Controller.h
src/app/Entity/: MemberInfo.h  MembersEntity.cpp  MembersEntity.h
src/app/Listener/: Listener.cpp  Listener.h
src/app/Model/: DeviceData.h
src/app/Service/: CardState.h  MembersManageService.cpp  MembersManageService.h  SetState.h
src/app/View/: View.cpp  View.h
src/hw/Button/: ManageButton.cpp  ManageButton.h
src/hw/Monitor/: Monitor.cpp  Monitor.h
src/hw/rfid/: CardReader.cpp  CardReader.h
src/hw/tcpServer/: ComDev.cpp  ComDev.h  tcpServer.cpp  tcpServer.h
